@@ -1165,7 +1165,7 @@ UNIQUE		|1		|actionid,triggerid,itemid,escalationid
 
 TABLE|globalvars|globalvarid|0
 FIELD		|globalvarid	|t_id		|	|NOT NULL	|0
-FIELD		|snmp_lastsize	|t_integer	|'0'	|NOT NULL	|0
+FIELD		|snmp_lastsize	|t_bigint	|'0'	|NOT NULL	|0
 
 TABLE|graph_discovery|graphid|0
 FIELD		|graphid	|t_id		|	|NOT NULL	|0			|1|graphs
@@ -1450,4 +1450,4 @@ FIELD		|acknowledgeid	|t_id		|	|NOT NULL	|0			|-|acknowledges
 TABLE|dbversion||
 FIELD		|mandatory	|t_integer	|'0'	|NOT NULL	|
 FIELD		|optional	|t_integer	|'0'	|NOT NULL	|
-ROW		|3030011	|3030011
+ROW		|3030012	|3030012
